--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,5 +4,177 @@
     box-sizing: border-box;
 }
 
+.header-blu{
+    background-color: #0084fd;
+}
 
+.header-flex{
+    display: flex;
+    justify-content: space-between;
+}
+/* LAYOUT RULES */
+.container{
+    max-width: 600px;
+    margin: 0 auto;
+}
+
+.left-logo, .right-menu{
+    width: 100px;
+    height: 100px;
+    background-color: yellow;
+}
+
+
+.hamburger, .extended-menu{
+    width: 100%;
+    height: 100%;
+}
+
+.extended-menu{
+    background-color: red;
+    display: none;
+}
+
+.hamburger{
+    background-color: green;
+}
+
+.flex{
+    display: flex;
+    flex-direction: column;
+}
+
+.row{
+    display: flex;
+    flex-direction: column;
+}
+
+.col-double, .col-30{
+    width: calc(100% -20px);
+    height: 300px;
+    background-color: red;
+    margin: 10px;
+}
+
+
+.content{
+    background-color: lightskyblue;
+    border-radius: 20px;
+}
+
+#planning{
+    background-color: #9792e4;
+}
+
+.col-50{
+    width: calc(100% - 20px);
+    height: 400px;
+    margin: 10px;
+    background-color: blue;
+}
+
+.col-100{
+    width: calc(100% - 20px);
+    height: 200px;
+    margin: 10px;
+    background-color: gold;
+}
+
+#benefits{
+    background-color: #9792e4;
+}
+
+.col-75{
+    width: calc(100% - 20px);
+    height: 400px;
+    margin: 10px;
+    background-color: brown;
+    float: left;
+}
+
+.col-25{
+    width: calc(100% - 20px);
+    height: 400px;
+    margin: 10px;
+    background-color: greenyellow;
+    float: left;
+}
+
+#started{
+    background-color: #9792e4;
+}
+
+.col-60{
+    width: calc(60% - 20px);
+    height: 300px;
+    margin: 10px auto;
+    background-color: aqua;
+}
+
+#footer{
+    background-color: black;
+}
+
+.col-55{
+    width: calc(55% - 20px);
+    height: 150px;
+    margin: 10px auto;
+    background-color: darkorange;
+}
+/* TABLET */
+@media screen and (min-width:768px){
+    .container{
+        max-width: 750px;
+    }
+
+    .content{
+        flex-direction: row;
+    }
+
+    .row{
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+
+    .col-double{
+        width: calc(100% / 3 * 2 - 20px);
+    }
+
+    .col-30{
+        width: calc(100% / 3 - 20px);
+    }
+}
+/* DESKTOP */
+@media screen and (min-width:991px){
+    .container{
+        max-width: 950px;
+    }
+
+    .extended-menu{
+        display: block;
+    }
+
+    .hamburger{
+        display: none;
+    }
+
+    .col-50{
+        width: calc(50% - 20px);
+    }
+
+    .col-75{
+        width: calc(100% - 30% - 20px);
+    }
+
+    .col-25{
+        width: calc(100% - 70% - 20px);
+    }
+}
+
+/* LARGE-DESKTOP */
+@media screen and (min-width:1200px){
+    .container{
+        max-width: 1140px;
+    }
+}
 
