--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,30 +14,39 @@
 }
 /* LAYOUT RULES */
 .container{
-    max-width: 600px;
+    max-width: 100%;
     margin: 0 auto;
 }
 
-.left-logo, .right-menu{
-    width: 100px;
-    height: 100px;
-    background-color: yellow;
-}
-
-
-.hamburger, .extended-menu{
-    width: 100%;
-    height: 100%;
-}
-
+/* HEADER */
 .extended-menu{
-    background-color: red;
+    margin-top: 10px;
     display: none;
 }
 
-.hamburger{
-    background-color: green;
+.content-header img{
+    width: 60px;
+    margin: 5px 15px;
 }
+
+.fa-bars{
+    font-size: 25px;
+    margin: 8px 15px 0;
+}
+
+.content-header a{
+    color: white;
+    text-decoration: none;
+    padding: 10px;
+}
+
+#border-radius{
+    background-color: white;
+    color: black;
+    border-radius: 10px;
+    padding: 5px 10px;
+}
+/* END HEADER */
 
 .flex{
     display: flex;
@@ -54,12 +63,6 @@
     height: 300px;
     background-color: red;
     margin: 10px;
-}
-
-
-.content{
-    background-color: lightskyblue;
-    border-radius: 20px;
 }
 
 #planning{
