--- a/CSS/style.css
+++ b/CSS/style.css
@@ -82,6 +82,10 @@ body{
     margin: 10px;
 }
 
+.margin{
+    margin-bottom: 50px;
+}
+
 .left-content{
     margin: 30px 0;
 }
@@ -141,9 +145,49 @@ span{
 
 .col-50{
     width: calc(100% - 20px);
-    height: 400px;
-    margin: 10px;
-    background-color: blue;
+    height: 500px;
+    margin: 20px 10px 0 10px;
+}
+
+.col-50 img{
+    width: 250px;
+    margin: 0 50px 0 30px;
+}
+
+#planning-1{
+    text-align: left;
+    font-size: 22px;
+    margin-left: 30px;
+    color: white;
+}
+
+.planning1{
+    color: white;
+    margin-left: 20px;
+}
+
+.content-planning{
+    border-radius: 20px;
+    background-color: white;
+}
+
+#planning-2{
+    text-align: center;
+    color: black;
+
+}
+
+.planning2{
+    text-align: center;
+    color: black;
+    margin-left: 0;
+}
+
+.fa-arrow-down-long{
+    margin: 20px 0 30px 155px;
+    background-color: #9792e4;
+    border-radius: 50%;
+    padding: 10px;
 }
 
 .col-100{
