--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,12 +4,9 @@
     box-sizing: border-box;
 }
 
-body{
-    font-family: 'Roboto', sans-serif;
-}
-
 .header-blu{
     background-color: #0084fd;
+    height: 50px;
     margin-bottom: 30px;
 }
 
@@ -19,27 +16,36 @@ body{
 }
 /* LAYOUT RULES */
 .container{
-    max-width: 100%;
+    max-width: 368px;
     margin: 0 auto;
 }
-
 /* HEADER */
-.extended-menu{
-    margin-top: 10px;
-    display: none;
+.left-logo, .right-menu{
+    width: 100px;
+    margin-top: 5px;
 }
 
-.content-header img{
+.hamburger .fa-bars{
+    display: flex;
+    justify-content: flex-end;
+    color: white;
+}
+
+.left-logo img, .hamburger .fa-bars{
+    margin: 5px 20px;
+}
+
+.left-logo img{
     width: 60px;
-    margin: 5px 15px;
+    vertical-align: middle;
 }
 
 .fa-bars{
     font-size: 25px;
-    margin: 8px 15px 0;
+    vertical-align: middle;
 }
 
-.content-header a{
+.extended-menu a{
     color: white;
     text-decoration: none;
     padding: 10px;
@@ -51,8 +57,22 @@ body{
     border-radius: 10px;
     padding: 5px 10px;
 }
+
+.hamburger, .extended-menu{
+    width: 100%;
+    height: 100%;
+}
+
+.extended-menu{
+    background-color: red;
+    display: none;
+}
+
+.hamburger{
+    display: block;
+}
 /* END HEADER */
-/* MAIN */
+/* SECTION-1 */
 .flex{
     display: flex;
     flex-direction: column;
@@ -63,131 +83,162 @@ body{
     flex-direction: column;
 }
 
-.content-flex{
-    width: 100%;
-}
-
 .col-double{
     width: calc(100% / 2 * 2 - 20px);
-    background-color: #b5ddff;
-    border-radius: 20px;
-    margin: 10px;
+    margin: 10px 10px 10px;
 }
 
-.col-30{
-    width: calc(100% -20px);
-    background-color: #b5ddff;
-    border-radius: 20px;
-    height: 300px;
-    margin: 10px;
+.left-content div{
+    margin: 20px auto;
 }
 
-.margin{
-    margin-bottom: 50px;
-}
-
-.left-content{
-    margin: 30px 0;
-}
-
-#img{
-    width: 200px;
-    margin: 30px 70px 0;
-}
-
-h2{
-    text-align: center;
+.left-content h2{
     width: 100%;
+    text-align: center;
     font-size: 20px;
     color: #007ffd;
 }
 
-p{
+.left-content p{
     font-size: 13px;
-    padding: 10px;
-    margin-left: 60px;
     line-height: 25px;
+    margin: 10px auto 0;
+    display: flex;
+    justify-content: center;
 }
 
 #button{
-    width: 50%;
+    width: 165px;
     background-color: #0084fd;
     border-radius: 20px;
-    margin-left: 60px;
-    margin-top: 15px;
-    
 }
 
 .fa-brands{
     font-size: 16px;
-    padding: 10px 5px 10px 35px;
+    color: white;
+    margin: 10px 0 10px 40px;
 }
 
 span{
     font-size: 16px;
     color: white;
+    margin: 10px 40px 10px 0;
+}
+
+.right-content img{
+    width: 80%;
+    margin: 10px auto 0;
+    display: flex;
+}
+
+.col-30{
+    width: calc (100% - 20px);
+    margin: 10px;
+}
+
+.col-30 div{
+    margin: 20px auto;
+}
+
+.col-30 i, .col-50 i{
+    display: flex;
 }
 
 .fa-file-code, .fa-compass-drafting, .fa-laptop-code, .fa-bullhorn{
     font-size: 60px;
-    margin: 20px 140px 0;
+    justify-content: center;
+    color: #0084fd;
 }
 
-.main{
+.col-30 h2, .col-30 p{
     text-align: center;
-    margin-top: 20px;
-    margin-left: 0;
+    margin: 20px auto;
 }
 
-#planning{
+.col-30 h2{
+    font-size: 20px;
+    color: #0084fd;
+}
+
+.col-30 p{
+    font-size: 13px;
+    line-height: 25px;
+}
+
+.content{
+    background-color: lightskyblue;
+    border-radius: 20px;
+}
+
+.background{
     background-color: #9792e4;
 }
 
 .col-50{
     width: calc(100% - 20px);
-    height: 500px;
-    margin: 20px 10px 0 10px;
+    margin: 10px;
 }
+
+.col-50 div{
+    margin: 20px auto;
+}
+
 
 .col-50 img{
-    width: 250px;
-    margin: 0 50px 0 30px;
+    width: 100%;
 }
 
-#planning-1{
-    text-align: left;
+
+.col-50 h2, .col-50 p{
+    margin: 20px auto;
+}
+
+.col-50 h2{
     font-size: 22px;
-    margin-left: 30px;
     color: white;
 }
 
-.planning1{
+.col-50 p{
+    font-size: 13px;
+    line-height: 20px;
     color: white;
-    margin-left: 20px;
 }
 
-.content-planning{
+#white{
+    width: 90%;
     border-radius: 20px;
     background-color: white;
+    margin-bottom: 30px;
 }
 
-#planning-2{
-    text-align: center;
+#white h2, #white p{
+    width: 100%;
     color: black;
-
+    text-align: center;
 }
 
-.planning2{
-    text-align: center;
-    color: black;
-    margin-left: 0;
+#planning{
+    width: 90%;
+    margin-top: 10px;
+    margin-left: 15px;
+}
+
+.col-50 #circle{
+    margin-bottom: 10px;
+}
+
+#circle{
+    width: 30px;
+    height: 30px;
+    background-color: #9792e4;
+    padding: 10px;
+    border-radius: 50%;
 }
 
 .fa-arrow-down-long{
-    margin: 20px 0 30px 155px;
-    background-color: #9792e4;
-    border-radius: 50%;
-    padding: 10px;
+    color: #212121;
+    font-size: 10px;
+    justify-content: center;
 }
 
 .col-100{
@@ -227,8 +278,7 @@ span{
     margin: 10px auto;
     background-color: aqua;
 }
-/* END MAIN*/
-/* FOOTER */
+
 #footer{
     background-color: black;
 }
@@ -239,7 +289,6 @@ span{
     margin: 10px auto;
     background-color: darkorange;
 }
-/* END FOOTER */
 /* TABLET */
 @media screen and (min-width:768px){
     .container{
@@ -257,28 +306,10 @@ span{
 
     .col-double{
         width: calc(100% / 3 * 2 - 20px);
-        height: 300px;
-    }
-
-    .left-content{
-        width: 50%;
-    }
-
-    .right-content{
-        width: 50%;
     }
 
     .col-30{
         width: calc(100% / 3 - 20px);
-    }
-
-    .fa-file-code, .fa-compass-drafting, .fa-bullhorn{
-        font-size: 60px;
-        margin: 20px 120px 0;
-    }
-
-    .fa-laptop-code{
-        margin-left: 110px;
     }
 }
 /* DESKTOP */
@@ -314,4 +345,3 @@ span{
         max-width: 1140px;
     }
 }
-
