--- a/CSS/style.css
+++ b/CSS/style.css
@@ -286,24 +286,64 @@ span{
 #benefits{
     width: 100%;
     margin: 70px 0;
-    height: 1500px;
     background-color: #9792e4;
 }
 
 .col-10{
     width: calc(100% - 20px);
-    height: 150px;
-    background-color: red;
     margin: 10px;
+}
+
+.col-10 h2{
+    font-size: 23px;
+    color: white;
+    text-align: center;
+    margin: 20px 0;
+
 }
 
 #benefits .col-30{
     width: calc(100% - 20px);
-    height: 200px;
-    margin: 10px;
-    background-color: green;
+    margin: 20px 10px;
+    border-radius: 20px;
+    background-color: white;
 }
 
+#benefits .margin{
+    margin-left: 40px;
+}
+
+#benefits div, #benefits h3{
+    color: #9792e4;
+}
+
+#benefits div{
+    font-size: 30px;
+}
+
+#benefits h3{
+    font-size: 19px;
+}
+
+#benefits p{
+    text-align: left;
+    color: black;
+}
+
+#more{
+    width: 100px;
+    background-color: #9792e4;
+    margin-left: 0;
+    border-radius: 20px;
+}
+
+#more div{
+    font-size: 16px;
+    color: white;
+    padding: 6px 35px;
+}
+/* END SECTION-4 */
+/* SECTION-5 */
 .col-75 div, .col-25 div{
     margin: 0 40px;
 }
@@ -353,7 +393,8 @@ span{
     font-size: 12px;
     margin: 5px;
 }
-
+/* END SECTION-5 */
+/* SECTION-6 */
 #started{
     background-color: #9792e4;
 }
@@ -364,7 +405,8 @@ span{
     margin: 10px auto;
     background-color: aqua;
 }
-
+/* END SECTION-6 */
+/* SECTION-7 */
 #footer{
     background-color: black;
 }
@@ -375,6 +417,9 @@ span{
     margin: 10px auto;
     background-color: darkorange;
 }
+/* END SECTION-7 */
+
+/* MEDIA QUERY */
 /* TABLET */
 @media screen and (min-width:768px){
     .container{
